--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,10 @@
 [github]
-token = 
+token = ghp_
 owner = llvm
 repo = llvm-project
 
 [filters]
-start_date = 2025-03-01
+start_date = 2025-02-01
 end_date = 2025-03-13
 only_closed_prs = true
 only_merged_prs = true
