--- a/.github/workflows/post_recommendations.yml
+++ b/.github/workflows/post_recommendations.yml
@@ -17,6 +17,9 @@ jobs:
         with:
           python-version: '3.11'  # Use 3.10 or 3.11 to get SciPy prebuilt wheels
 
+      - name: Check Python Version
+        run: python --version
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
