--- a/.github/workflows/process_feedback.yml
+++ b/.github/workflows/process_feedback.yml
@@ -15,12 +15,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyyaml requests
+          pip install pyyaml requests scipy
 
       - name: Process Feedback Comment
         env:
