--- a/.github/workflows/post_recommendations.yml
+++ b/.github/workflows/post_recommendations.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install scipy
-          pip install pandas networkx pyyaml openpyxl requests scipy
+          pip install scipy pandas networkx pyyaml openpyxl requests 
 
       - name: Run Recommendation Script
         env:
