--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,7 @@ start_date = 2025-02-01
 end_date = 2025-03-13
 only_closed_prs = true
 only_merged_prs = true
-required_labels = clang,frontend
+required_labels = 
 
 [database]
 file = pr_data.db
